added/removed Uploader options

--- a/Source/Utilities/Uploader/AeroQuadUploader.ini
+++ b/Source/Utilities/Uploader/AeroQuadUploader.ini
@@ -1,7 +1,7 @@
 [Configuration]
 Arduino IDE Path = ""
 Flight Software Path = ""
-Debug = TRUE    
+Debug = TRUE
 Upload Delay = .75
 
 [Flight Board]
@@ -11,8 +11,7 @@ AeroQuad_Mini = AeroQuad Mini
 AeroQuad_v18 = AeroQuad v1.8 or greater
 AeroQuad_v1 = AeroQuad v1.0
 AeroQuad_v1_IDG = AeroQuad v1.0 with IDG gyro
-AeroQuad_Wii = Wii sensors
-AeroQuad_Paris_v3 = Paris v3
+AeroQuad_Wii = Arduino Uno with Wii Sensors and AeroQuad Shield v1.x
 AeroQuadMega_v1 = AeroQuad v1.0 with Arduino Mega
 AeroQuadMega_Wii = AeroQuad with Arduino Mega and Wii sensors
 ArduCopter = ArduCopter
@@ -36,17 +35,14 @@ octoPlusConfig = Octo +
 octoX8Config = Octo X8X
 
 [Flight Options]
-FlightAngleMARG = Flight Angle Estimation - MARG,Orientation estimation filter using accelerometers, gyros and magnetometers. To use DCM, do not select MARG or ARG.
-FlightAngleARG = Flight Angle Estimation - ARG,Orentation estimation filter using accelerometers and gyros. To use DCM, do not select MARG or ARG.
-HeadingMagHold = Heading Hold - Magenetometer,Select this to enable the magnetometer hardware. Used for heading hold and MARG filter
+AeroQuad_Paris_v3 = Paris v3 Board,Includes specific changes for MultiWiiCopter Paris v3.0 board
+UseGPS = GPS Receiver,Enables GPS (for mega v2.0/v2.1 on Serial1 & AeroQuad32 on Serial2)
+UseGPSNavigator = GPS-assisted Flight Modes,Needs GPS to be defined. Enables GPS Position Hold, auto return to home if no mission or execute mission
+HeadingMagHold = Heading Hold - Magenetometer,Select this to enable the magnetometer hardware. Used for Heading Hold and GPS assisted flight modes
 AltitudeHoldBaro = Altitude Hold - Barometer,Select this to enable the barometer in hardware. Used for altitude hold by measuring air pressure
 AltitudeHoldRangeFinder = Altitude Hold - Range Finder,Select this to enable Maxbotix LV-EZ0 ultrasonic range finder for low altitude hold
-RateModeOnly = Rate Mode Only,Select this if you only have gyroscopes installed in your AeroQuad shield
 BattMonitor = Battery Monitor,Select this to enable the battery monitor software
-BattMonitorAutoDescent = Battery Monitor - Auto Descent,Select this to cause the auto descent feature when a low battery condition is detected. Requires the Battery Monitor feature to be enabled.
-BattCellCount 0 = Battery Monitor - Auto Detect LIPO Battery Cells,This auto detects number of cells in LIPO battery
-BattCellCount 3 = Battery Monitor - Battery has 3 cells,This defines 11.1V LIPO batteries
-BattCellCount 4 = Battery Monitor - Battery has 4 cells,This defines 14.6V LIPO batteries
+BattMonitorAutoDescent = Battery Monitor - Auto Descent,Select this to cause the auto descent feature when a low battery condition is detected. Requires the Battery Monitor feature to be enabled. Auto-detects LiPo Battery Cells.
 POWERED_BY_VIN = Battery Monitor - AeroQuad Shield Connected to VIN,Select this if you directly connect your battery to the VIN pin instead of the Arduino DC connector. Selecting this will provide more accurate voltage results for this particular configuration.
 LASTCHANNEL 6 = Transmitter Channels - 6 Channel R/C Receiver,Defines the number of channels to use on your R/C receiver. Either 6 or 8 channels must be selected.
 LASTCHANNEL 8 = Transmitter Channels - 8 Channel R/C Receiver,Defines the number of channels to use on your R/C receiver. Either 6 or 8 channels must be selected.
@@ -57,55 +53,55 @@ ReceiverHWPPM = Receiver PPM - PPM with HW Timer,Needs a HW modification (see Li
 SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_1 = Receiver PPM - Graupner/Spektrum,Select one of these channel order definitions for PPM receiver
 SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_2 = Receiver PPM - Robe/Hitec/Futaba,Select one of these channel order definitions for PPM receiver
 SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_3 = Receiver PPM - Hitec/Sanwa/Others,Select one of these channel order definitions for PPM receiver
-OLD_MOTOR_NUMBERING = Use legacy motor assignments,Choose this if you have wired up your AeroQuad using the v2.x software motor pinouts
+UseAnalogRSSIReader = Analog RSSI Reader,Reads RSSI for receiver failsafe. Needs a recevier with failsafe connected to Analog In 6
+UseEzUHFRSSIReader = EzUHF RSSI Reader,Reads RSSI and Signal quality on channel 7(RSSI) and 8(Signal Quality) of the EzUHF receiver (Receiver have to be configures this way)
+OLD_MOTOR_NUMBERING = Use legacy motor assignments for Quad configurations,Choose this if you have wired up your AeroQuad using the v2.x software motor pinouts
+CameraControl = Camera Stabilization Control,Enable output to servos used for camera stabilization
+CameraTXControl = Camera Stabilization Control via Transmitter,Allows control of camera pitch servo via the transmitter (AUX3). Need to have CameraControl defined.
+OSD = On Screen Display,Enable MAX7456 On Screen Display
+PAL = On Screen Display - PAL,Select this for PAL video output, do not select to default to NTSC
+AUTODETECT_VIDEO_STANDARD = On Screen Display - Auto Detect Video Standard,Detect video output type automatically, signal must be present at Arduino powerup
+ShowAttitudeIndicator = On Screen Display - Show Attitude Indicator,Display the attitude indicator calculated by the AHRS
+ShowRSSI = On Screen Display - Show RSSI,Show receiver RSSI. This requires a RSSI reader.
+USUnits = On Screen Display - Display US units,Select to use US units (feet,miles,mph), do not select to use metric units
+OSD_SYSTEM_MENU = On Screen Display - OSD System Menu,Enable OSD system menu. Currently only usable with OSD or a Serial LCD.
 WirelessTelemetry = Wireless Telemetry,Enables Wireless telemetry on Serial3
 BinaryWrite = Fast Binary Write,Enables fast binary transfer of flight data to Configurator
 BinaryWritePID = Fast Binary PID Write,Enables fast binary transfer of attitude PID data
 OpenlogBinaryWrite = OpenLog Binary Write,Enables fast binary transfer to serial1 and openlog hardware
-CameraControl = Camera Stabilization Control,Enable output to servos used for camera stabilization
-OSD = On Screen Display,Enable MAX7456 On Screen Display
-PAL = On Screen Display - PAL,Select this for PAL video output, do not select to default to NTSC
-AUTODETECT_VIDEO_STANDARD = On Screen Display - Auto Detect Video Standard,Detect video output type automatically, signal must be present at Arduino powerup
-ShowReticle = On Screen Display - Show Reticle,Displays a reticle in the center of the screen.
-ShowFlightTimer = On Screen Display - Show Flight Timer,Displays how long the motors have been armed for since the Arduino was last reset
-ShowAttitudeIndicator = On Screen Display - Show Attitude Indicator,Display the attitude indicator calculated by the AHRS
-ShowCallSign = On Screen Display - Show CallSign,Display call sign on screen
-ShowRSSI = On Screen Display - Show RSSI,Show receiver RSSI
-feet = On Screen Display - Display Distance in Feet,Select to show distances in feet, do not select to show distances in meters
-OSD_SYSTEM_MENU = On Screen Display - OSD System Menu,Enable OSD system menu
+MavLink = MavLink Protocol, Enables the MavLink protocol (default system ID: 100)
+SlowTelemetry = Audio Channel Telemetry,Enables audio channel telemetry on Serial2 (1200 baud rate)
 
 [Valid Flight Options]
-AeroQuad_Mini = FlightAngleMARG,FlightAngleARG,HeadingMagHold,AltitudeHoldBaro,RateModeOnly,BattMonitor,BattCellCount 0,BattCellCount 3,BattCellCount 4,BattMonitorAutoDescent,LASTCHANNEL 6
-AeroQuad_v18 = FlightAngleMARG,FlightAngleARG,RateModeOnly,HeadingMagHold,AltitudeHoldBaro,AltitudeHoldRangeFinder,BattMonitor,BattCellCount 0,BattCellCount 3,BattCellCount 4,BattMonitorAutoDescent,LASTCHANNEL 6
-AeroQuadMega_v2 = FlightAngleMARG,FlightAngleARG,HeadingMagHold,AltitudeHoldBaro,AltitudeHoldRangeFinder,RateModeOnly,BattMonitor,BattCellCount 0,BattCellCount 3,BattCellCount 4,BattMonitorAutoDescent,POWERED_BY_VIN,OLD_MOTOR_NUMBERING,LASTCHANNEL 6,LASTCHANNEL 8,RemotePCReceiver,ReceiverSBUS,ReceiverPPM,ReceiverHWPPM,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_1,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_2,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_3,WirelessTelemetry,BinaryWrite,BinaryWritePID,OpenlogBinaryWrite,CameraControl,OSD,PAL,AUTODETECT_VIDEO_STANDARD,ShowReticle,ShowFlightTimer,ShowAttitudeIndicator,ShowCallSign,ShowRSSI,feet,OSD_SYSTEM_MENU
-AeroQuad_v1 = FlightAngleARG,RateModeOnly,LASTCHANNEL 6
-AeroQuad_v1_IDG = FlightAngleARG,RateModeOnly,LASTCHANNEL 6
-AeroQuad_Wii = FlightAngleARG,RateModeOnly,LASTCHANNEL 6
-AeroQuad_Paris_v3 = FlightAngleARG,RateModeOnly,LASTCHANNEL 6
-AeroQuadMega_v1 = FlightAngleMARG,FlightAngleARG,HeadingMagHold,AltitudeHoldBaro,AltitudeHoldRangeFinder,RateModeOnly,BattMonitor,BattCellCount 0,BattCellCount 3,BattCellCount 4,BattMonitorAutoDescent,POWERED_BY_VIN,RemotePCReceiver,ReceiverPPM,ReceiverHWPPM,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_1,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_2,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_3,WirelessTelemetry,BinaryWrite,BinaryWritePID,OpenlogBinaryWrite,LASTCHANNEL 6,LASTCHANNEL 8,CameraControl,OSD,PAL,AUTODETECT_VIDEO_STANDARD,ShowReticle,ShowFlightTimer,ShowAttitudeIndicator,ShowCallSign,ShowRSSI,feet,OSD_SYSTEM_MENU
-AeroQuadMega_v21 = FlightAngleMARG,FlightAngleARG,HeadingMagHold,AltitudeHoldBaro,AltitudeHoldRangeFinder,RateModeOnly,BattMonitor,BattCellCount 0,BattCellCount 3,BattCellCount 4,BattMonitorAutoDescent,POWERED_BY_VIN,OLD_MOTOR_NUMBERING,LASTCHANNEL 6,LASTCHANNEL 8,RemotePCReceiver,ReceiverSBUS,ReceiverPPM,ReceiverHWPPM,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_1,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_2,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_3,WirelessTelemetry,BinaryWrite,BinaryWritePID,OpenlogBinaryWrite,CameraControl,OSD,PAL,AUTODETECT_VIDEO_STANDARD,ShowReticle,ShowFlightTimer,ShowAttitudeIndicator,ShowCallSign,ShowRSSI,feet,OSD_SYSTEM_MENU
-AeroQuadMega_Wii = FlightAngleMARG,FlightAngleARG,HeadingMagHold,AltitudeHoldBaro,AltitudeHoldRangeFinder,RateModeOnly,BattMonitor,BattCellCount 0,BattCellCount 3,BattCellCount 4,BattMonitorAutoDescent,POWERED_BY_VIN,RemotePCReceiver,ReceiverPPM,ReceiverHWPPM,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_1,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_2,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_3,WirelessTelemetry,BinaryWrite,BinaryWritePID,OpenlogBinaryWrite,LASTCHANNEL 6,LASTCHANNEL 8,CameraControl,OSD,PAL,AUTODETECT_VIDEO_STANDARD,ShowReticle,ShowFlightTimer,ShowAttitudeIndicator,ShowCallSign,ShowRSSI,feet,OSD_SYSTEM_MENU
-ArduCopter = FlightAngleMARG,FlightAngleARG,HeadingMagHold,AltitudeHoldBaro,AltitudeHoldRangeFinder,RateModeOnly,BattMonitor,BattCellCount 0,BattCellCount 3,BattCellCount 4,BattMonitorAutoDescent,POWERED_BY_VIN,OLD_MOTOR_NUMBERING,LASTCHANNEL 6,LASTCHANNEL 8,RemotePCReceiver,ReceiverPPM,ReceiverHWPPM,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_1,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_2,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_3,WirelessTelemetry,BinaryWrite,BinaryWritePID,OpenlogBinaryWrite,CameraControl,OSD,PAL,AUTODETECT_VIDEO_STANDARD,ShowReticle,ShowFlightTimer,ShowAttitudeIndicator,ShowCallSign,ShowRSSI,feet,OSD_SYSTEM_MENU
-AeroQuadMega_CHR6DM = FlightAngleMARG,FlightAngleARG,HeadingMagHold,AltitudeHoldBaro,AltitudeHoldRangeFinder,RateModeOnly,BattMonitor,BattCellCount 0,BattCellCount 3,BattCellCount 4,BattMonitorAutoDescent,POWERED_BY_VIN,OLD_MOTOR_NUMBERING,LASTCHANNEL 6,LASTCHANNEL 8,RemotePCReceiver,ReceiverPPM,ReceiverHWPPM,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_1,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_2,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_3,WirelessTelemetry,BinaryWrite,BinaryWritePID,OpenlogBinaryWrite,CameraControl,OSD,PAL,AUTODETECT_VIDEO_STANDARD,ShowReticle,ShowFlightTimer,ShowAttitudeIndicator,ShowCallSign,ShowRSSI,feet,OSD_SYSTEM_MENU
-APM_OP_CHR6DM = FlightAngleMARG,FlightAngleARG,HeadingMagHold,AltitudeHoldBaro,AltitudeHoldRangeFinder,RateModeOnly,BattMonitor,BattCellCount 0,BattCellCount 3,BattCellCount 4,BattMonitorAutoDescent,POWERED_BY_VIN,OLD_MOTOR_NUMBERING,LASTCHANNEL 6,LASTCHANNEL 8,RemotePCReceiver,ReceiverPPM,ReceiverHWPPM,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_1,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_2,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_3,WirelessTelemetry,BinaryWrite,BinaryWritePID,OpenlogBinaryWrite,CameraControl,OSD,PAL,AUTODETECT_VIDEO_STANDARD,ShowReticle,ShowFlightTimer,ShowAttitudeIndicator,ShowCallSign,ShowRSSI,feet,OSD_SYSTEM_MENU
+AeroQuad_Mini = HeadingMagHold,AltitudeHoldBaro,BattMonitor,BattMonitorAutoDescent,LASTCHANNEL 6
+AeroQuad_v18 = HeadingMagHold,AltitudeHoldBaro,AltitudeHoldRangeFinder,BattMonitor,BattMonitorAutoDescent,LASTCHANNEL 6
+AeroQuadMega_v2 = UseGPS,UseGPSNavigator,HeadingMagHold,AltitudeHoldBaro,AltitudeHoldRangeFinder,BattMonitor,BattMonitorAutoDescent,POWERED_BY_VIN,OLD_MOTOR_NUMBERING,LASTCHANNEL 6,LASTCHANNEL 8,RemotePCReceiver,ReceiverSBUS,ReceiverPPM,ReceiverHWPPM,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_1,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_2,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_3,UseAnalogRSSIReader,UseEzUHFRSSIReader,CameraControl,CameraTXControl,OSD,PAL,AUTODETECT_VIDEO_STANDARD,ShowAttitudeIndicator,ShowRSSI,USUnits,OSD_SYSTEM_MENU,WirelessTelemetry,BinaryWrite,BinaryWritePID,OpenlogBinaryWrite,MavLink,SlowTelemetry
+AeroQuad_v1 = LASTCHANNEL 6
+AeroQuad_v1_IDG = LASTCHANNEL 6
+AeroQuad_Wii = LASTCHANNEL 6
+AeroQuadMega_v1 = UseGPS,UseGPSNavigator,HeadingMagHold,AltitudeHoldBaro,AltitudeHoldRangeFinder,BattMonitor,BattMonitorAutoDescent,POWERED_BY_VIN,RemotePCReceiver,ReceiverPPM,ReceiverHWPPM,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_1,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_2,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_3,UseAnalogRSSIReader,UseEzUHFRSSIReader,LASTCHANNEL 6,LASTCHANNEL 8,CameraControl,CameraTXControl,OSD,PAL,AUTODETECT_VIDEO_STANDARD,ShowAttitudeIndicator,ShowRSSI,USUnits,OSD_SYSTEM_MENU,WirelessTelemetry,BinaryWrite,BinaryWritePID,OpenlogBinaryWrite,MavLink,SlowTelemetry
+AeroQuadMega_v21 = UseGPS,UseGPSNavigator,HeadingMagHold,AltitudeHoldBaro,AltitudeHoldRangeFinder,BattMonitor,BattMonitorAutoDescent,POWERED_BY_VIN,OLD_MOTOR_NUMBERING,LASTCHANNEL 6,LASTCHANNEL 8,RemotePCReceiver,ReceiverSBUS,ReceiverPPM,ReceiverHWPPM,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_1,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_2,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_3,UseAnalogRSSIReader,UseEzUHFRSSIReader,CameraControl,OSD,PAL,AUTODETECT_VIDEO_STANDARD,ShowAttitudeIndicator,ShowRSSI,USUnits,OSD_SYSTEM_MENU,WirelessTelemetry,BinaryWrite,BinaryWritePID,OpenlogBinaryWrite,MavLink,SlowTelemetry
+AeroQuadMega_Wii = UseGPS,UseGPSNavigator,AeroQuad_Paris_v3,HeadingMagHold,AltitudeHoldBaro,AltitudeHoldRangeFinder,BattMonitor,BattMonitorAutoDescent,POWERED_BY_VIN,RemotePCReceiver,ReceiverPPM,ReceiverHWPPM,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_1,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_2,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_3,UseAnalogRSSIReader,UseEzUHFRSSIReader,LASTCHANNEL 6,LASTCHANNEL 8,CameraControl,CameraTXControl,OSD,PAL,AUTODETECT_VIDEO_STANDARD,ShowAttitudeIndicator,ShowRSSI,USUnits,OSD_SYSTEM_MENU,WirelessTelemetry,BinaryWrite,BinaryWritePID,OpenlogBinaryWrite,MavLink,SlowTelemetry
+ArduCopter = UseGPS,UseGPSNavigator,AltitudeHoldBaro,AltitudeHoldRangeFinder,BattMonitor,BattMonitorAutoDescent,POWERED_BY_VIN,OLD_MOTOR_NUMBERING,LASTCHANNEL 6,LASTCHANNEL 8,RemotePCReceiver,ReceiverPPM,ReceiverHWPPM,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_1,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_2,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_3,UseAnalogRSSIReader,UseEzUHFRSSIReader,CameraControl,CameraTXControl,OSD,PAL,AUTODETECT_VIDEO_STANDARD,ShowAttitudeIndicator,ShowRSSI,USUnits,OSD_SYSTEM_MENU,WirelessTelemetry,BinaryWrite,BinaryWritePID,OpenlogBinaryWrite,MavLink,SlowTelemetry
+AeroQuadMega_CHR6DM = UseGPS,UseGPSNavigator,HeadingMagHold,AltitudeHoldBaro,AltitudeHoldRangeFinder,BattMonitor,BattMonitorAutoDescent,POWERED_BY_VIN,OLD_MOTOR_NUMBERING,LASTCHANNEL 6,LASTCHANNEL 8,RemotePCReceiver,ReceiverPPM,ReceiverHWPPM,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_1,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_2,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_3,UseAnalogRSSIReader,UseEzUHFRSSIReader,CameraControl,CameraTXControl,OSD,PAL,AUTODETECT_VIDEO_STANDARD,ShowAttitudeIndicator,ShowRSSI,USUnits,OSD_SYSTEM_MENU,WirelessTelemetry,BinaryWrite,BinaryWritePID,OpenlogBinaryWrite,MavLink,SlowTelemetry
+APM_OP_CHR6DM = UseGPS,UseGPSNavigator,HeadingMagHold,AltitudeHoldBaro,AltitudeHoldRangeFinder,BattMonitor,BattMonitorAutoDescent,POWERED_BY_VIN,OLD_MOTOR_NUMBERING,LASTCHANNEL 6,LASTCHANNEL 8,RemotePCReceiver,ReceiverPPM,ReceiverHWPPM,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_1,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_2,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_3,UseAnalogRSSIReader,UseEzUHFRSSIReader,CameraControl,CameraTXControl,OSD,PAL,AUTODETECT_VIDEO_STANDARD,ShowReticle,ShowFlightTimer,ShowAttitudeIndicator,ShowCallSign,ShowRSSI,feet,OSD_SYSTEM_MENU,WirelessTelemetry,BinaryWrite,BinaryWritePID,OpenlogBinaryWrite,MavLink,SlowTelemetry
 
 [Default Flight Options]
-AeroQuad_Mini = FlightAngleARG,BattMonitor,BattCellCount 3,BattMonitorAutoDescent,LASTCHANNEL 6
-AeroQuad_v18 = FlightAngleARG,BattMonitor,BattCellCount 3,BattMonitorAutoDescent,LASTCHANNEL 6
-AeroQuadMega_v2 = HeadingMagHold,AltitudeHoldBaro,BattMonitor,BattCellCount 3,BattMonitorAutoDescent,LASTCHANNEL 6
-AeroQuad_v1 = FlightAngleARG,LASTCHANNEL 6
-AeroQuad_v1_IDG = FlightAngleARG,LASTCHANNEL 6
-AeroQuad_Wii = FlightAngleARG,LASTCHANNEL 6
-AeroQuad_Paris_v3 = FlightAngleARG,LASTCHANNEL 6
+AeroQuad_Mini = BattMonitor,BattMonitorAutoDescent,LASTCHANNEL 6
+AeroQuad_v18 = BattMonitor,BattMonitorAutoDescent,LASTCHANNEL 6
+AeroQuadMega_v2 = HeadingMagHold,AltitudeHoldBaro,BattMonitor,BattMonitorAutoDescent,LASTCHANNEL 6
+AeroQuad_v1 = LASTCHANNEL 6
+AeroQuad_v1_IDG = LASTCHANNEL 6
+AeroQuad_Wii = LASTCHANNEL 6
 AeroQuadMega_v1 = LASTCHANNEL 6
-AeroQuadMega_v21 = HeadingMagHold,AltitudeHoldBaro,BattMonitor,BattCellCount 3,BattMonitorAutoDescent,LASTCHANNEL 6
+AeroQuadMega_v21 = HeadingMagHold,AltitudeHoldBaro,BattMonitor,BattMonitorAutoDescent,LASTCHANNEL 6
 AeroQuadMega_Wii = HeadingMagHold,AltitudeHoldBaro,LASTCHANNEL 6
-ArduCopter = HeadingMagHold,AltitudeHoldBaro,BattMonitor,BattCellCount 3,BattMonitorAutoDescent,LASTCHANNEL 6
-AeroQuadMega_CHR6DM = HeadingMagHold,AltitudeHoldBaro,BattMonitor,BattCellCount 3,BattMonitorAutoDescent,LASTCHANNEL 6
-APM_OP_CHR6DM = HeadingMagHold,AltitudeHoldBaro,BattMonitor,BattCellCount 3,BattMonitorAutoDescent,LASTCHANNEL 6
+ArduCopter = HeadingMagHold,AltitudeHoldBaro,BattMonitor,BattMonitorAutoDescent,LASTCHANNEL 6
+AeroQuadMega_CHR6DM = HeadingMagHold,AltitudeHoldBaro,BattMonitor,BattMonitorAutoDescent,LASTCHANNEL 6
+APM_OP_CHR6DM = HeadingMagHold,AltitudeHoldBaro,BattMonitor,BattMonitorAutoDescent,LASTCHANNEL 6
 
 [Current Settings]
-Flight Control Board = 0    
+Flight Control Board = 0   
 Com Port = "<Select Com Port>"
 Flight Configuration = 1    
 MCU = ""
