added plot for attitude, preparing for v3.2 release for AQ32 boards

--- a/Source/AeroQuadConfigurator.ini
+++ b/Source/AeroQuadConfigurator.ini
@@ -262,3 +262,10 @@ Plot 7 = Aux2
 Plot 8 = Aux3
 Plot 9 = Aux4
 Plot 10 = Aux5
+
+[Altitude Data]
+Type = Plot
+Format = Text
+Telemetry = z
+Plot 1 = Barometer
+Plot 2 = Range Finder
